@@ -1,4 +1,8 @@
-2007-04-10 19:19 -0700  Brendan Cully  <brendan@kublai.com>  (ddd38b4cf15c)
+2007-04-10 19:28 -0700  Brendan Cully  <brendan@kublai.com>  (d12143e1a610)
+
+	* hcache.c: Try to unlink old header cache if open fails
+
+	* bcache.c, imap/imap.c, imap/util.c, lib.c: Fix some warnings
 
 	* hcache.c: Refactor mutt_hcache_open to share more code
 
